--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            overflow: hidden;
+            overflow: auto;
         }
 
         /* Titoli */
