--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <script>
         // Dati modificabili: aggiorna i contenuti qui
         const boxContents = [
-            { link: "", text: "1 DICEMBRE BUONO AMAZON", image: "https://media.discordapp.net/attachments/1303649795130396733/1307817298664493156/Progetto_senza_titolo1.png?ex=673da986&is=673c5806&hm=aa9a1416baa50f6e2c19744114c1a9df6a6848665cee095afa8c871fd60a16bc&=&format=webp&quality=lossless" },
+            { link: "", text: "1 DICEMBRE", image: "https://media.discordapp.net/attachments/1303649795130396733/1307817298664493156/Progetto_senza_titolo1.png?ex=673da986&is=673c5806&hm=aa9a1416baa50f6e2c19744114c1a9df6a6848665cee095afa8c871fd60a16bc&=&format=webp&quality=lossless" },
             { link: "https://example.com/2", text: "2 DICEMBRE", image: "https://cdn.discordapp.com/attachments/1303649795130396733/1307817298664493156/Progetto_senza_titolo1.png?ex=673da986&is=673c5806&hm=aa9a1416baa50f6e2c19744114c1a9df6a6848665cee095afa8c871fd60a16bc&" },
             { link: "https://example.com/3", text: "3 DICEMBRE", image: "" },
             { link: "https://example.com/4", text: "4 DICEMBRE", image: "" },
