--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <style>
         /* Sfondo */
         body {
-            background-image: url('https://cdn.discordapp.com/attachments/1134533272441983086/1308399533549420574/grand-theft-auto-5-online-santa-artwork-for-christmas-uhd-4k-wallpaper.png?ex=673dcd85&is=673c7c05&hm=96926cf843777f45b50ff2f8f2bcc4075c739592ddfa73daf91e7ba722dd794b&'); /* URL sfondo natalizio */
-            background-size: cover;
+            background-image: url('background.png');
             background-position: center;
             min-height: 100vh;
             font-family: 'Arial Rounded MT Bold', Arial, sans-serif;
