--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <style>
         /* Sfondo */
         body {
-            background-image: url('background.png');
-            background-position: center;
-            min-height: 100vh;
-            font-family: 'Arial Rounded MT Bold', Arial, sans-serif;
-            padding: 20px;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            overflow: auto;
-        }
-
+    background-image: url('background.png');
+    background-size: cover;
+    background-position: center;
+    min-height: 100vh;
+    font-family: 'Arial Rounded MT Bold', Arial, sans-serif;
+    padding: 20px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: auto;
+}
         /* Titoli */
         .title {
             color: #FFD700;
