--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     {
         link: "https://example.com/1",
         text: "1 DICEMBRE",
-        image: "",
+        image: "https://cdn.discordapp.com/attachments/1303649795130396733/1310181241357733898/IMG_3734.png?ex=674448dd&is=6742f75d&hm=56d36f8f59e817653560c42c408a79a2262cf95773f4eeace073e86da6f0e39e&",
         backgroundImage: "https://media.discordapp.net/attachments/1303649795130396733/1310181241357733898/IMG_3734.png?ex=674448dd&is=6742f75d&hm=56d36f8f59e817653560c42c408a79a2262cf95773f4eeace073e86da6f0e39e&=&format=webp&quality=lossless&width=1055&height=671"
     },
     {
