--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
         // Dati modificabili: aggiorna i contenuti qui
         const boxContents = [
     {
-        link: "https://example.com/1",
-        text: "1 DICEMBRE",
-        image: "https://cdn.discordapp.com/attachments/1303649795130396733/1310181241357733898/IMG_3734.png?ex=674448dd&is=6742f75d&hm=56d36f8f59e817653560c42c408a79a2262cf95773f4eeace073e86da6f0e39e&",
-        backgroundImage: "https://media.discordapp.net/attachments/1303649795130396733/1310181241357733898/IMG_3734.png?ex=674448dd&is=6742f75d&hm=56d36f8f59e817653560c42c408a79a2262cf95773f4eeace073e86da6f0e39e&=&format=webp&quality=lossless&width=1055&height=671"
+        link: "https://discord.gg/WSH8NPqq",
+        text: "1 DICEMBRE BUONO AMAZON",
+        image: "https://media.discordapp.net/attachments/1303649795130396733/1310181241357733898/IMG_3734.png?ex=67459a5d&is=674448dd&hm=0f6380a08229e5fe5d4b8d5d618ab19f85b4c68b08750ceb8ebd359ac5f55be9&=&format=webp&quality=lossless&width=1055&height=671",
+        backgroundImage: "https://media.discordapp.net/attachments/1303649795130396733/1310181241357733898/IMG_3734.png?ex=67459a5d&is=674448dd&hm=0f6380a08229e5fe5d4b8d5d618ab19f85b4c68b08750ceb8ebd359ac5f55be9&=&format=webp&quality=lossless&width=1055&height=671"
     },
     {
         link: "https://example.com/2",
