--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         const boxContents = [
     {
         link: "https://discord.gg/WSH8NPqq",
-        text: "1 DICEMBRE BUONO AMAZON",
+        text: "",
         image: "https://media.discordapp.net/attachments/1303649795130396733/1310181241357733898/IMG_3734.png?ex=67459a5d&is=674448dd&hm=0f6380a08229e5fe5d4b8d5d618ab19f85b4c68b08750ceb8ebd359ac5f55be9&=&format=webp&quality=lossless&width=1055&height=671",
         backgroundImage: "https://media.discordapp.net/attachments/1303649795130396733/1310181241357733898/IMG_3734.png?ex=67459a5d&is=674448dd&hm=0f6380a08229e5fe5d4b8d5d618ab19f85b4c68b08750ceb8ebd359ac5f55be9&=&format=webp&quality=lossless&width=1055&height=671"
     },
