--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "2 DICEMBRE",
-        image: "https://cdn.discordapp.com/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674b3840&is=6749e6c0&hm=00f9558d006f2f78c638090b477e01ae14ff1f559abc5bd562114c4c435f3289&",
-        backgroundImage: "https://cdn.discordapp.com/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674b3840&is=6749e6c0&hm=00f9558d006f2f78c638090b477e01ae14ff1f559abc5bd562114c4c435f3289&"
+        image: "",
+        backgroundImage: ""
     },
     {
         link: "https://example.com/3",
