--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
         backgroundImage: "https://media.discordapp.net/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674ddb40&is=674c89c0&hm=1eefae841b57b663b161ceb5d77359d880385a0cf4b7bd2649279a9c34cfc02d&=&format=webp&quality=lossless"
     },
     {
-        link: "https://example.com/3",
+        link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "3 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image3.jpg"
+        image: "https://cdn.discordapp.com/attachments/1309811217577017344/1313269087496835173/buono-regalo-1200x829-removebg-preview.png?ex=674f84a5&is=674e3325&hm=b784183799ebe65aa9b40f8b056c25994c592490a85737b7032746587c9aa3e1&",
+        backgroundImage: "https://cdn.discordapp.com/attachments/1309811217577017344/1313269087496835173/buono-regalo-1200x829-removebg-preview.png?ex=674f84a5&is=674e3325&hm=b784183799ebe65aa9b40f8b056c25994c592490a85737b7032746587c9aa3e1&"
     },
     {
         link: "https://example.com/4",
