--- a/index.html
+++ b/index.html
@@ -194,14 +194,14 @@
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "1 DICEMBRE",
-        image: "https://media.discordapp.net/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674ddb40&is=674c89c0&hm=1eefae841b57b663b161ceb5d77359d880385a0cf4b7bd2649279a9c34cfc02d&=&format=webp&quality=lossless",
-        backgroundImage: "https://media.discordapp.net/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674ddb40&is=674c89c0&hm=1eefae841b57b663b161ceb5d77359d880385a0cf4b7bd2649279a9c34cfc02d&=&format=webp&quality=lossless"
+        image: "https://cdn.discordapp.com/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674f2cc0&is=674ddb40&hm=055e7c3d50bf92001e9e92fb9fb4760d764aaca39e5d4ac6a9aa4fbf1b3eec4a&",
+        backgroundImage: "https://cdn.discordapp.com/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674f2cc0&is=674ddb40&hm=055e7c3d50bf92001e9e92fb9fb4760d764aaca39e5d4ac6a9aa4fbf1b3eec4a&"
     },
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "2 DICEMBRE",
-        image: "https://media.discordapp.net/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674ddb40&is=674c89c0&hm=1eefae841b57b663b161ceb5d77359d880385a0cf4b7bd2649279a9c34cfc02d&=&format=webp&quality=lossless",
-        backgroundImage: "https://media.discordapp.net/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674ddb40&is=674c89c0&hm=1eefae841b57b663b161ceb5d77359d880385a0cf4b7bd2649279a9c34cfc02d&=&format=webp&quality=lossless"
+        image: "https://cdn.discordapp.com/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674f2cc0&is=674ddb40&hm=055e7c3d50bf92001e9e92fb9fb4760d764aaca39e5d4ac6a9aa4fbf1b3eec4a&",
+        backgroundImage: "https://cdn.discordapp.com/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674f2cc0&is=674ddb40&hm=055e7c3d50bf92001e9e92fb9fb4760d764aaca39e5d4ac6a9aa4fbf1b3eec4a&"
     },
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
