--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         backgroundImage: "https://cdn.discordapp.com/attachments/1309811217577017344/1313269087496835173/buono-regalo-1200x829-removebg-preview.png?ex=674f84a5&is=674e3325&hm=b784183799ebe65aa9b40f8b056c25994c592490a85737b7032746587c9aa3e1&"
     },
     {
-        link: "https://example.com/4",
+        link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "4 DICEMBRE",
         image: "",
         backgroundImage: "https://example.com/image4.jpg"
