--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "1 DICEMBRE",
-        image: "https://cdn.discordapp.com/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674f2cc0&is=674ddb40&hm=055e7c3d50bf92001e9e92fb9fb4760d764aaca39e5d4ac6a9aa4fbf1b3eec4a&",
-        backgroundImage: "https://cdn.discordapp.com/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674f2cc0&is=674ddb40&hm=055e7c3d50bf92001e9e92fb9fb4760d764aaca39e5d4ac6a9aa4fbf1b3eec4a&"
+        image: "./immagini/buono.png",
+        backgroundImage: "./immagini/buono.png"
     },
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
