--- a/index.html
+++ b/index.html
@@ -200,20 +200,19 @@
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "2 DICEMBRE",
-        image: "https://cdn.discordapp.com/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674f2cc0&is=674ddb40&hm=055e7c3d50bf92001e9e92fb9fb4760d764aaca39e5d4ac6a9aa4fbf1b3eec4a&",
-        backgroundImage: "https://cdn.discordapp.com/attachments/1309811217577017344/1312087546544521406/buono-amazon-20-euro.png?ex=674f2cc0&is=674ddb40&hm=055e7c3d50bf92001e9e92fb9fb4760d764aaca39e5d4ac6a9aa4fbf1b3eec4a&"
-    },
+        image: "./immagini/buono.png",
+        backgroundImage: "./immagini/buono.png"
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "3 DICEMBRE",
-        image: "https://cdn.discordapp.com/attachments/1309811217577017344/1313269087496835173/buono-regalo-1200x829-removebg-preview.png?ex=674f84a5&is=674e3325&hm=b784183799ebe65aa9b40f8b056c25994c592490a85737b7032746587c9aa3e1&",
-        backgroundImage: "https://cdn.discordapp.com/attachments/1309811217577017344/1313269087496835173/buono-regalo-1200x829-removebg-preview.png?ex=674f84a5&is=674e3325&hm=b784183799ebe65aa9b40f8b056c25994c592490a85737b7032746587c9aa3e1&"
+        image: "./immagini/buono20.png",
+        backgroundImage: "./immagini/buono20.png"
     },
     {
-        link: "https://discord.com/channels/885887875768520704/1310569912200200192",
+        link: "https://discord.com/channels/885887875768520704/976471100219355186",
         text: "4 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image4.jpg"
+        image: "./immagini/spoiler.jpg",
+        backgroundImage: "./immagini/spoiler.jpg"
     },
     {
         link: "https://example.com/5",
