--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "2 DICEMBRE",
-        image: "./immagini/buono.png",
-        backgroundImage: "./immagini/buono.png"
+        image: "",
+        backgroundImage: ""
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "3 DICEMBRE",
-        image: "./immagini/buono20.png",
+        image: "",
         backgroundImage: "./immagini/buono20.png"
     },
     {
