--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "1 DICEMBRE",
-        image: "./immagini/buono.png",
-        backgroundImage: "./immagini/buono.png"
+        image: "",
+        backgroundImage: ""
     },
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
@@ -206,13 +206,13 @@
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "3 DICEMBRE",
         image: "",
-        backgroundImage: "./immagini/buono20.png"
+        backgroundImage: ""
     },
     {
         link: "https://discord.com/channels/885887875768520704/976471100219355186",
         text: "4 DICEMBRE",
-        image: "./immagini/spoiler.jpg",
-        backgroundImage: "./immagini/spoiler.jpg"
+        image: "",
+        backgroundImage: ""
     },
     {
         link: "https://example.com/5",
