--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "1 DICEMBRE",
-        image: "",
-        backgroundImage: ""
+        image: "./immagini/buono.png",
+        backgroundImage: "./immagini/buono.png"
     },
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
