--- a/index.html
+++ b/index.html
@@ -200,14 +200,14 @@
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "2 DICEMBRE",
-        image: "",
-        backgroundImage: ""
+        image: "./immagini/buono.png",
+        backgroundImage: "./immagini/buono.png"
     },
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "3 DICEMBRE",
-        image: "",
-        backgroundImage: ""
+        image: "./immagini/buono20.png",
+        backgroundImage: "./immagini/buono20.png",
     },
     {
         link: "https://discord.com/channels/885887875768520704/976471100219355186",
