--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
     {
         link: "https://discord.com/channels/885887875768520704/976471100219355186",
         text: "4 DICEMBRE",
-        image: "",
-        backgroundImage: ""
+        image: "./immagini/spoiler.jpg",
+        backgroundImage: "./immagini/spoiler.jpg"
     },
     {
         link: "https://example.com/5",
