--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
         backgroundImage: "./immagini/spoiler.jpg"
     },
     {
-        link: "https://example.com/5",
+        link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "5 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image5.jpg"
+        image: "./immagini/discord.png",
+        backgroundImage: "./immagini/discord.png"
     },
     {
         link: "https://example.com/6",
