--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
         backgroundImage: "./immagini/discord.png"
     },
     {
-        link: "https://example.com/6",
+        link: "https://discord.com/channels/885887875768520704/976471100219355186",
         text: "6 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image6.jpg"
+        image: "./immagini/spoiler.jpg",
+        backgroundImage: "./immagini/spoiler.jpg"
     },
     {
         link: "https://example.com/7",
