--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "3 DICEMBRE",
         image: "./immagini/buono20.png",
-        backgroundImage: "./immagini/buono20.png",
+        backgroundImage: "./immagini/buono20.png"
     },
     {
         link: "https://discord.com/channels/885887875768520704/976471100219355186",
@@ -228,10 +228,10 @@
         backgroundImage: "./immagini/spoiler.jpg"
     },
     {
-        link: "https://example.com/7",
+        link: "https://www.instagram.com/avalonrpofficial/",
         text: "7 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image7.jpg"
+        image: "./immagini/buono20.png",
+        backgroundImage: "./immagini/buono20.png"
     },
     {
         link: "https://example.com/8",
