--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
     {
         link: "https://www.instagram.com/avalonrpofficial/",
         text: "7 DICEMBRE",
-        image: "./immagini/buono20.png",
-        backgroundImage: "./immagini/buono20.png"
+        image: "./immagini/buono.png",
+        backgroundImage: "./immagini/buono.png"
     },
     {
         link: "https://example.com/8",
