--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
         backgroundImage: "./immagini/buono.png"
     },
     {
-        link: "https://example.com/8",
+        link: "https://discord.com/channels/885887875768520704/1313275831891787826",
         text: "8 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image8.jpg"
+        image: "./immagini/wl.png",
+        backgroundImage: "./immagini/wl.png"
     },
     {
         link: "https://example.com/9",
