--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
         backgroundImage: "./immagini/wl.png"
     },
     {
-        link: "https://example.com/9",
+        link: "https://discord.com/channels/885887875768520704/976471100219355186",
         text: "9 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image9.jpg"
+        image: "./immagini/spoiler.jpg",
+        backgroundImage: "./immagini/spoiler.jpg"
     },
     {
         link: "https://example.com/10",
