--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@
         backgroundImage: "./immagini/spoiler.jpg"
     },
     {
-        link: "https://example.com/10",
+        link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "10 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image10.jpg"
+        image: "./immagini/buono20.png",
+        backgroundImage: "./immagini/buono20.png"
     },
     {
         link: "https://example.com/11",
