--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         backgroundImage: "./immagini/buono20.png"
     },
     {
-        link: "https://example.com/11",
+        link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "11 DICEMBRE",
         image: "",
         backgroundImage: "https://example.com/image11.jpg"
