--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
     {
         link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "11 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image11.jpg"
+        image: "./immagini/IMG_6771.jpeg",
+        backgroundImage: "./immagini/IMG_6771.jpeg"
     },
     {
         link: "https://example.com/12",
