--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
         backgroundImage: "./immagini/IMG_6771.jpeg"
     },
     {
-        link: "https://example.com/12",
+        link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "12 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image12.jpg"
+        image: "./immagini/moneta.png",
+        backgroundImage: "./immagini/moneta.png"
     },
     {
         link: "https://example.com/13",
