--- a/index.html
+++ b/index.html
@@ -264,10 +264,10 @@
         backgroundImage: "./immagini/moneta.png"
     },
     {
-        link: "https://example.com/13",
+        link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "13 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image13.jpg"
+        image: "./immagini/tatoos.jpg",
+        backgroundImage: "./immagini/tatoos.jpg"
     },
     {
         link: "https://example.com/14",
