--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
         backgroundImage: "./immagini/tatoos.jpg"
     },
     {
-        link: "https://example.com/14",
+        link: "https://discord.com/channels/885887875768520704/976471100219355186",
         text: "14 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image14.jpg"
+        image: "./immagini/buono20.png",
+        backgroundImage: "./immagini/buono20.png"
     },
     {
         link: "https://example.com/15",
