--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         backgroundImage: "./immagini/buono20.png"
     },
     {
-        link: "https://example.com/15",
+        link: "https://youtu.be/qjsRsVnBKMA",
         text: "15 DICEMBRE",
         image: "",
         backgroundImage: "https://example.com/image15.jpg"
