--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
     {
         link: "https://discord.com/channels/885887875768520704/976471100219355186",
         text: "14 DICEMBRE",
-        image: "./immagini/buono20.png",
-        backgroundImage: "./immagini/buono20.png"
+        image: "./immagini/avalon2.png",
+        backgroundImage: "./immagini/avalon2.png"
     },
     {
         link: "https://youtu.be/qjsRsVnBKMA",
