--- a/index.html
+++ b/index.html
@@ -272,14 +272,14 @@
     {
         link: "https://discord.com/channels/885887875768520704/976471100219355186",
         text: "14 DICEMBRE",
-        image: "./immagini/avalon2.png",
-        backgroundImage: "./immagini/avalon2.png"
+        image: "./immagini/spoiler.jpg",
+        backgroundImage: "./immagini/spoiler.jpg"
     },
     {
         link: "https://youtu.be/qjsRsVnBKMA",
         text: "15 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image15.jpg"
+        image: "./immagini/avalon2.png",
+        backgroundImage: "./immagini/avalon2.png",
     },
     {
         link: "https://example.com/16",
