--- a/index.html
+++ b/index.html
@@ -279,13 +279,13 @@
         link: "https://youtu.be/qjsRsVnBKMA",
         text: "15 DICEMBRE",
         image: "./immagini/avalon 2.png",
-        backgroundImage: "./immagini/avalon 2.png",
+        backgroundImage: "./immagini/avalon 2.png"
     },
     {
-        link: "https://example.com/16",
+        link: "https://youtu.be/qjsRsVnBKMA",
         text: "16 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image16.jpg"
+        image: "./immagini/avalon 2.png",
+        backgroundImage: "./immagini/avalon 2.png"
     },
     {
         link: "https://example.com/17",
