--- a/index.html
+++ b/index.html
@@ -278,20 +278,20 @@
     {
         link: "https://youtu.be/qjsRsVnBKMA",
         text: "15 DICEMBRE",
-        image: "./immagini/avalon 2.png",
-        backgroundImage: "./immagini/avalon 2.png"
+         image: "./immagini/trailer.jpg",
+        backgroundImage: "./immagini/trailer.jpg"
     },
     {
         link: "https://youtu.be/qjsRsVnBKMA",
         text: "16 DICEMBRE",
-        image: "./immagini/avalon 2.png",
-        backgroundImage: "./immagini/avalon 2.png"
+        image: "./immagini/trailer.jpg",
+        backgroundImage: "./immagini/trailer.jpg"
     },
     {
         link: "https://example.com/17",
         text: "17 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image17.jpg"
+        image: "./immagini/trailer.jpg",
+        backgroundImage: "./immagini/trailer.jpg"
     },
     {
         link: "https://example.com/18",
