--- a/index.html
+++ b/index.html
@@ -290,14 +290,14 @@
     {
         link: "https://example.com/17",
         text: "17 DICEMBRE",
-        image: "./immagini/trailer.jpg",
-        backgroundImage: "./immagini/trailer.jpg"
+        image: "./immagini/soundtrack.png",
+        backgroundImage: "./immagini/soundtrack.png"
     },
     {
         link: "https://example.com/18",
         text: "18 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image18.jpg"
+        image: "./immagini/soundtrack.png",
+        backgroundImage: "./immagini/soundtrack.png"
     },
     {
         link: "https://example.com/19",
