--- a/index.html
+++ b/index.html
@@ -288,13 +288,13 @@
         backgroundImage: "./immagini/trailer.jpg"
     },
     {
-        link: "https://example.com/17",
+        link: "https://discord.com/channels/885887875768520704/959763769603534899",
         text: "17 DICEMBRE",
         image: "./immagini/soundtrack.png",
         backgroundImage: "./immagini/soundtrack.png"
     },
     {
-        link: "https://example.com/18",
+        link: "https://discord.com/channels/885887875768520704/959763769603534899"
         text: "18 DICEMBRE",
         image: "./immagini/soundtrack.png",
         backgroundImage: "./immagini/soundtrack.png"
