--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         backgroundImage: "./immagini/soundtrack.png"
     },
     {
-        link: "https://discord.com/channels/885887875768520704/959763769603534899"
+        link: "https://discord.com/channels/885887875768520704/959763769603534899",
         text: "18 DICEMBRE",
         image: "./immagini/soundtrack.png",
         backgroundImage: "./immagini/soundtrack.png"
