--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
         backgroundImage: "./immagini/soundtrack.png"
     },
     {
-        link: "https://example.com/19",
+        link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "19 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image19.jpg"
+        image: "./immagini/tatoos.jpg",
+        backgroundImage: "./immagini/tatoos.jpg"
     },
     {
         link: "https://example.com/20",
