--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
         backgroundImage: "./immagini/tatoos.jpg"
     },
     {
-        link: "https://example.com/20",
+        link: "https://discord.com/channels/885887875768520704/976471100219355186",
         text: "20 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image20.jpg"
+        image: "./immagini/spoiler.jpg",
+        backgroundImage: "./immagini/spoiler.jpg"
     },
     {
         link: "https://example.com/21",
