--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
         backgroundImage: "./immagini/spoiler.jpg"
     },
     {
-        link: "https://example.com/21",
+        link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "21 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image21.jpg"
+        image: "./immagini/gun.jpg",
+        backgroundImage: "./immagini/gun.jpg"
     },
     {
         link: "https://example.com/22",
