--- a/index.html
+++ b/index.html
@@ -318,10 +318,10 @@
         backgroundImage: "./immagini/gun.jpg"
     },
     {
-        link: "https://example.com/22",
+        link: "https://discord.com/channels/885887875768520704/976471100219355186",
         text: "22 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image22.jpg"
+         image: "./immagini/spoiler.jpg",
+        backgroundImage: "./immagini/spoiler.jpg"
     },
     {
         link: "https://example.com/23",
