--- a/index.html
+++ b/index.html
@@ -324,10 +324,10 @@
         backgroundImage: "./immagini/spoiler.jpg"
     },
     {
-        link: "https://example.com/23",
+        link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "23 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image23.jpg"
+        image: "./immagini/cuore.jpg",
+        backgroundImage: "./immagini/cuore.jpg"
     },
     {
         link: "https://example.com/24",
