--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
         backgroundImage: "./immagini/cuore.jpg"
     },
     {
-        link: "https://example.com/24",
+        link: "https://discord.com/channels/885887875768520704/1310569912200200192",
         text: "24 DICEMBRE",
-        image: "",
-        backgroundImage: "https://example.com/image24.jpg"
+        image: "./immagini/natale.jpg",
+        backgroundImage: "./immagini/natale.jpg"
     }
 ];
 
